# docs/swagger.yaml
@@ -23,6 +23,14 @@ definitions:
         example: ACE
         type: string
     type: object
+  http.Cards:
+    description: represents a collection of cards
+    properties:
+      cards:
+        items:
+          $ref: '#/definitions/http.Card'
+        type: array
+    type: object
   http.DeckClosed:
     description: represents a closed deck of cards
     properties:
@@ -127,8 +135,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/http.DeckOpened'
         "400":
@@ -162,10 +170,10 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
-            $ref: '#/definitions/http.Card'
+            $ref: '#/definitions/http.Cards'
         "400":
           description: Bad Request
           schema:
